style(abc:page-header): fix extra align

--- a/packages/abc/page-header/style/index.less
+++ b/packages/abc/page-header/style/index.less
@@ -89,7 +89,8 @@
 
   &__action,
   &__extra {
-    text-align: right;
+    display: flex;
+    justify-content: end;
   }
 
   &__extra {
